<resources>
    <string name="app_name">Patolandis</string>
    <string name="hintlogin"> Login </string>
    <string name="hintcadastro"> Cadastrar </string>
    <string name="hintsenha"> Senha</string>
    <string name="end"> Endereço </string>
    <string name="descricao"> Pato em uma montanha russa</string>
    <string name="logarbotao"> LOGAR </string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="alturaminima"> Altura Mínima: </string>
    <string name="txtpatolandia"> Patolândia</string>
    <string name="distancia"> Distância da atração: </string>
    <string name="txtola"> Olá, </string>
    <string name="desejo"> O que desejas hoje?</string>
    <string name="txtmontanha"> Montanha-Russa </string>
    <string name="txttunel"> Patúnel Aquático</string>
    <string name="txtcarrosel"> Patossel </string>
    <string name="txtcheque"> Cheque o mecanismo de pesquisa de nosso parceiro</string>
    <string name="txtmontanhadesc"> Localizada em Itupeva, nossa montanha provocará muita emoção e adrenalina, e aí? Vai encarar?</string>
    <string name="endmontanha"> Itupeva - SP, 13295-000 </string>
    <string name="endroda"> 13280-000, Vinhedo - SP </string>
    <string name="txtenderecoroda"> Nossa Roda-Gigante é o ponto mais calmo do seu passeio, onde poderás aproveitar a paisagem do parque por completo e sentir aquele vento no cabelo estando a 88 metros de altura</string>
    <string name="txtrodagig"> Roda-Gigante </string>
    <string name="txtpatunelend">Logo próximo à Rodovia dos Bandeirantes, localiza-se o nosso radical tunel aquático, uma aventura paa os dias mais quentes</string>
    <string name="endpatunel"> Rod. dos Bandeirantes, KM 72, Vinhedo - SP, 13280-000</string>
    <string name="txtpatosselend"><justify> Nosso carrossel com patos é uma atração que todas a criançada vai adorar! Um ótimo lugar para relaxar enquanto as crianças se divertem </justify></string>
    <string name="endpatossel"> Jardim Vista Alegre, Louveira - SP, 13290-000 </string>
    <string name="txtcadastrar"> <u>Ainda não possui cadastro?</u></string>
    <string name="txtnome"> Nome </string>
    <string name="txtapelido"> Apelido </string>
    <string name="txtdata"> Data de Nascimento </string>
    <string name="txtcelular"> Celular </string>
    <string name="txtsenha"> Senha </string>
    <string name="txtcadastro"> Cadastrar </string>


</resources>