<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F67247"
    tools:context=".PrincipalActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="318dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057">

        <TextView
            android:id="@+id/txtpatolandia"
            android:layout_width="171dp"
            android:layout_height="60dp"
            android:layout_below="@+id/imageView"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="147dp"
            android:layout_marginTop="-111dp"
            android:layout_marginEnd="-157dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/amatica_sc"
            android:text="@string/txtpatolandia"
            android:textAlignment="gravity"
            android:textColor="#FFD34F"
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="161dp"
            android:layout_height="130dp"
            android:contentDescription="@string/descricao"
            app:srcCompat="@drawable/patin" />

        <TextView
            android:id="@+id/txtola"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignBottom="@+id/imageView"
            android:layout_marginStart="-45dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="-65dp"
            android:layout_toEndOf="@+id/imageView"
            android:fontFamily="@font/amatica_sc"
            android:text="@string/txtola"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtnomelog"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_marginStart="146dp"
            android:layout_marginEnd="-154dp"
            android:layout_marginBottom="-59dp"
            android:fontFamily="@font/amatica_sc"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actbutton"
        android:layout_width="62dp"
        android:layout_height="69dp"
        android:clickable="true"
        android:onClick="Chamar"
        app:backgroundTint="#952121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.821"
        app:srcCompat="@drawable/emergency" />

    <TextView
        android:id="@+id/txtdesejo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatica_sc"
        android:text="@string/desejo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/txtmontanha"
        android:layout_width="307dp"
        android:layout_height="64dp"
        android:background="#BF534B"
        android:clickable="true"
        android:fontFamily="@font/amatica_sc"
        android:onClick="Montanhar"
        android:shadowColor="#4E1515"
        android:text="@string/txtmontanha"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdesejo"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/txttunel"
        android:layout_width="307dp"
        android:layout_height="64dp"
        android:background="#BF534B"
        android:clickable="true"
        android:fontFamily="@font/amatica_sc"
        android:onClick="Patunar"
        android:shadowColor="#4E1515"
        android:text="@string/txttunel"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdesejo"
        app:layout_constraintVertical_bias="0.279" />

    <TextView
        android:id="@+id/txtcarrossel"
        android:layout_width="307dp"
        android:layout_height="64dp"
        android:background="#BF534B"
        android:clickable="true"
        android:fontFamily="@font/amatica_sc"
        android:onClick="Patossar"
        android:shadowColor="#4E1515"
        android:text="@string/txtcarrosel"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdesejo"
        app:layout_constraintVertical_bias="0.483" />

    <TextView
        android:id="@+id/txtrodagig"
        android:layout_width="307dp"
        android:layout_height="64dp"
        android:background="#BF534B"
        android:clickable="true"
        android:fontFamily="@font/amatica_sc"
        android:onClick="rodaGigantar"
        android:shadowColor="#4E1515"
        android:text="@string/txtrodagig"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdesejo"
        app:layout_constraintVertical_bias="0.698" />

    <ImageView
        android:id="@+id/imgflashlight"
        android:layout_width="87dp"
        android:layout_height="55dp"
        android:clickable="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:srcCompat="@drawable/flashlight" />

</androidx.constraintlayout.widget.ConstraintLayout>