<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F67247"
    tools:context=".PatunelActivity">

    <TextView
        android:id="@+id/txtpatolandia"
        android:layout_width="171dp"
        android:layout_height="60dp"
        android:layout_below="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentStart="true"
        android:fontFamily="@font/amatica_sc"
        android:text="@string/txtpatolandia"
        android:textAlignment="gravity"
        android:textColor="#FFD34F"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="512dp"
        android:fontFamily="@font/amatica_sc"
        android:text="@string/txttunel"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.045" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPagerslider"
        android:layout_width="382dp"
        android:layout_height="220dp"

        android:layout_marginBottom="276dp"
        android:layoutDirection="ltr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.839">

    </androidx.viewpager2.widget.ViewPager2>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="161dp"
        android:layout_height="130dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/patin" />

    <TextView
        android:id="@+id/txtendereco"
        android:layout_width="170dp"
        android:layout_height="27dp"
        android:fontFamily="@font/amatica_sc"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="384dp"
        android:layout_height="55dp"
        android:fontFamily="@font/amatica_sc"
        android:text="@string/txtpatunelend"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/txtendereco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPagerslider"
        app:layout_constraintVertical_bias="0.068" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="369dp"
        android:layout_height="54dp"
        android:fontFamily="@font/amatica_sc"
        android:text="@string/endpatunel"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.754" />

</androidx.constraintlayout.widget.ConstraintLayout>