<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FB7C53"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="378dp"
        android:layout_height="511dp"
        android:backgroundTint="#F67247"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354">

        <ImageView
            android:id="@+id/imgview"
            android:layout_width="195dp"
            android:layout_height="174dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/hintlogin"
            app:srcCompat="@drawable/patin" />

        <TextView
            android:id="@+id/txtlogin"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:fontFamily="@font/amatica_sc"
            android:hint="@string/hintlogin"
            android:text="@string/hintlogin"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtlogincad"
            android:layout_width="133dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:textColor="@android:color/secondary_text_dark" />

        <TextView
            android:id="@+id/txtsenha"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:enabled="false"
            android:fontFamily="@font/amatica_sc"
            android:hint="@string/hintsenha"
            android:text="@string/hintsenha"
            android:textColor="@android:color/primary_text_dark_nodisable"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtsenha"
            android:layout_width="134dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:textColor="@android:color/secondary_text_dark" />

        <Button
            android:id="@+id/button"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="99dp"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#C35836"
            android:fontFamily="@font/amatica_sc"
            android:hint="@string/logarbotao"
            android:onClick="Logar"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/txtcadastrar"
            android:layout_width="206dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:fontFamily="@font/amatica_sc"
            android:onClick="cadastrarnovo"
            android:text="@string/txtcadastrar"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatica_sc"
        android:text="@string/txtcheque"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.313" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_marginTop="57dp"
        android:onClick="Duckar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868"
        app:srcCompat="@drawable/ddgo" />

</androidx.constraintlayout.widget.ConstraintLayout>